升级 redis 版本和依赖包版本